[gd_scene load_steps=10 format=3 uid="uid://c624p7x76kmy4"]

[ext_resource type="Texture2D" uid="uid://lklvuunmw808" path="res://ui_test_5.png" id="1_egdde"]
[ext_resource type="Script" path="res://UI/UIanimations/Vertical Menu/VerticalMenu.gd" id="2_cfsly"]
[ext_resource type="Texture2D" uid="uid://xs5g64yv7faw" path="res://UI/UIanimations/Vertical Menu/splotch_test_1.png" id="3_35rsm"]
[ext_resource type="Texture2D" uid="uid://cl3utyqutk41l" path="res://UI/UIanimations/Vertical Menu/splotch_test_2.png" id="4_gmt4i"]
[ext_resource type="Texture2D" uid="uid://d16eet0si5prd" path="res://UI/UIanimations/Vertical Menu/splotch_test_3.png" id="5_v6vqi"]
[ext_resource type="Texture2D" uid="uid://bptpfid73xeyy" path="res://UI/UIanimations/Vertical Menu/splotch_test_4.png" id="6_2m4a5"]
[ext_resource type="PackedScene" uid="uid://c832w0nm6w3wv" path="res://UI/UIanimations/static_rust_test.tscn" id="7_83ppd"]
[ext_resource type="PackedScene" uid="uid://det7ovoh6c42h" path="res://UI/badge_ui.tscn" id="8_1fx46"]
[ext_resource type="PackedScene" uid="uid://befgtb1fc8w7k" path="res://UI/ship_pop_up.tscn" id="9_lrk18"]

[node name="ShipMap" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
visible = false
position = Vector2(631, 380)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_egdde")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="UIVert" type="Node2D" parent="CanvasLayer2"]
position = Vector2(1074, 345)
script = ExtResource("2_cfsly")

[node name="SplotchTest1" type="Sprite2D" parent="CanvasLayer2/UIVert"]
texture_filter = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_35rsm")

[node name="SplotchTest2" type="Sprite2D" parent="CanvasLayer2/UIVert"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_gmt4i")

[node name="SplotchTest3" type="Sprite2D" parent="CanvasLayer2/UIVert"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v6vqi")

[node name="SplotchTest4" type="Sprite2D" parent="CanvasLayer2/UIVert"]
texture_filter = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_2m4a5")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer2"]
offset_left = 952.0
offset_top = 79.0
offset_right = 1217.0
offset_bottom = 623.0

[node name="MapBox" type="MarginContainer" parent="CanvasLayer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox"]
layout_mode = 2

[node name="Sector 1" type="PanelContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1/VBoxContainer"]
layout_mode = 2
text = "LSS Dorian"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1/VBoxContainer"]
layout_mode = 2

[node name="S1B1" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bridge"

[node name="S1B2" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Server Room"

[node name="S1B3" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 1/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Crew Quarters"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2

[node name="Sector 2" type="PanelContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 2/VBoxContainer"]
layout_mode = 2
text = "DSS Valiant"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 2/VBoxContainer"]
layout_mode = 2

[node name="S2B1" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reactor"

[node name="S2B2" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 2/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cryo Cells"

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2

[node name="Sector 3" type="PanelContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3/VBoxContainer"]
layout_mode = 2
text = "MHS Heisenberg"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3/VBoxContainer"]
layout_mode = 2

[node name="S3B1" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Clean Room"

[node name="S3B2" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Med-Bay"

[node name="S3B3" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 3/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mess Hall
"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2

[node name="Sector 4" type="PanelContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 4"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 4/VBoxContainer"]
layout_mode = 2
text = "OPS Tanaka"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 4/VBoxContainer"]
layout_mode = 2

[node name="S4B1" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 4/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sleeper Cells"

[node name="S4B3" type="Button" parent="CanvasLayer2/PanelContainer/MapBox/VBoxContainer/Sector 4/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Shuttle Bay
"

[node name="StaticRustTest" parent="CanvasLayer2" instance=ExtResource("7_83ppd")]
position = Vector2(502, 334)

[node name="Button" type="Button" parent="CanvasLayer2/StaticRustTest"]
offset_left = -80.0
offset_top = -12.0
offset_right = 91.0
offset_bottom = 19.0
text = "UH OH its an event"

[node name="BadgeUI" parent="CanvasLayer2" instance=ExtResource("8_1fx46")]
offset_right = 151.0
offset_bottom = 116.0
scale = Vector2(1.76, 1.72)

[node name="ShipPopUp" parent="." instance=ExtResource("9_lrk18")]
offset_left = 502.0
offset_top = 515.0
offset_right = 768.0
offset_bottom = 598.0

[connection signal="pressed" from="CanvasLayer2/StaticRustTest/Button" to="CanvasLayer2/StaticRustTest" method="_on_button_pressed"]
